[package]
authors = ["Rust-IPFS contributors"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ipfs"
readme = "README.md"
repository = "https://github.com/rs-ipfs/rust-ipfs"
description = "IPFS node implementation"
version = "0.2.1"

[features]
default = []

# feature will enable sled_data_store use in ipfs::Types (default used by ipfs-http for example)
# sled dependency is not guarded by this to keep compiling and test the pinstore.
sled_data_store = []
test_go_interop = []
test_js_interop = []

[dependencies]
anyhow = "1.0"
cid = { version = "0.8", features = ["alloc", "std"] }
multihash = { version = "0.16" }
thiserror = { default-features = false, version = "1.0" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["std"], version = "1.0" }
byteorder = { default-features = false, version = "1.3" }
tokio = { default-features = false, features = ["fs", "macros", "rt", "sync"], version = "1.0" }
base64 = { default-features = false, features = ["alloc"], version = "0.13" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
hex-literal = { default-features = false, version = "0.3" }
sha2 = { default-features = false, version = "0.9" }
tokio = { default-features = false, features = ["io-std", "io-util", "time"], version = "1" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log", "ansi", "env-filter"], version = "0.2" }
rand = { default-features = false, version = "0.8", features = ["std", "std_rng"] }
tempfile = "3.1.0"


# at least these libp2p components need to be patched if you want to use a local version
# libp2p = { path = "../libp2p" }
# libp2p-core = { path = "../libp2p" }
# libp2p-swarm = { path = "../libp2p" }
# libp2p-floodsub = { path = "../libp2p" }
